# lmit-stern-ofx-converter

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  settings.template.yaml  settings.yaml
.github/workflows/: pre-commit.yaml  test-package.yaml  test.yml
docs/: 001-support-additional-filetypes.md
ofx_converter/: __init__.py  __main__.py  argparser.py  config.py  logger.py  ofx_client.py  reader.py  reader_factory.py  runner.py  transaction.py  transaction_parser.py  utils.py
ofx_converter/parsing/: abstract_value_parser.py  account.py  account_config.py  account_type.py  accounts.py  builder.py  date_parser.py  money_parser.py  nubank_transaction_parser.py  ofx_transaction_parser.py  transaction.py  transaction_parser.py  xp_transaction_parser.py
ofx_converter/reader/: abstract_reader.py  csv_reader.py  ofx_reader.py
ofx_converter/templates/: ofx_footer.ofx  ofx_footer.txt  ofx_header.ofx  ofx_transaction.ofx
ofx_converter/templates/banking/: ofx_footer.ofx  ofx_header.ofx
ofx_converter/templates/credit-card/: ofx_footer.ofx  ofx_header.ofx  ofx_transaction.ofx
tests/: base_test_case.py  settings.test.yaml  test_full_parsing.py  test_ofx_client.py
tests/files/nubank/card/: 2025-04.ofx
tests/files/xpi/card/: test.csv
tests/parsing/: test_date_parser.py  test_money_parser.py  test_ofx_parser.py
tests/reading/: test_transaction_reader.py
