[tool.poetry]
name = "ofx-converter"
version = "0.1.0"
description = ""
authors = ["Lucas Marcondes <lucasnascimento95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
debugpy = {version = "^1.8.6", optional = true}
dynaconf = "^3.2.6"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
python-dateutil = "^2.0"
ofxparse = "^0.21"

[tool.poetry.extras]
dev = [
  "debugpy",
  "ipython",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.mypy]
ignore_missing_imports = true
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting this passing should be easy
strict_equality = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true
