[project]
name = "ofx-converter"
version = "0.1.0"
description = ""
authors = [
  { name = "Lucas Marcondes", email = "lucasnascimento95@gmail.com" },
]
readme = "README.md"
dependencies = [
  "python>=3.12",
  "jinja2>=3.1.4",
  "dynaconf>=3.2.6",
  "pytest>=8.3.5",
  "pre-commit>=4.2.0",
  "python-dateutil>=2.0",
  # "ofxparse @ https://github.com/lmarcondes/ofxparse.git#feature/reimplement",
]
requires-python = ">3.10"

# [project.optional-dependencies]
# test = ["debugpy>=1.8.6"]
