[project]
name = "ofx-converter"
dynamic = ["version"]
description = ""
authors = [
  { name = "Lucas Marcondes", email = "lucasnascimento95@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.4",
  "dynaconf>=3.2.6",
  "pytest>=8.3.5",
  "pre-commit>=4.2.0",
  "python-dateutil>=2.0",
  "ofxparse @ git+https://github.com/lmarcondes/ofxparse@feature/reimplement",
]

[project.optional-dependencies]
test = ["debugpy>=1.8.6"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
